@@ -21,7 +21,7 @@ GridClassKey.panel.TVFieldsCombo = function(config) {
                 var comboValue = fieldsCombo.getValue();
                 var text = fieldsCombo.lastSelectionText;
                 if (comboValue) {
-                    targetGrid.data.push([text]);
+                    targetGrid.data.push([targetGrid.data.length + 1, text]);
                     targetGrid.getStore().loadData(targetGrid.data);
                     targetGrid.getView().refresh();
                     Ext.getCmp('modx-panel-resource').markDirty();
